Fixed button text color on iOS

--- a/index.css
+++ b/index.css
@@ -72,6 +72,7 @@ h1 {
 }
 
 button {
+  color: white;
   background: var(--fg-color);
   cursor: pointer;
   height: 46px;
